example-manifest/np.yaml
# default deny for all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# allow feeders access to zoo-web
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: feeders-access-policy
  namespace: zoo
spec:
  podSelector:
    matchLabels:
      app: zoo-web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: teams
          podSelector:
            matchLabels:
              app: feeders
      ports:
        - protocol: TCP
          port: 80
---
# allow all access for admins namespace to zoo namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admins-access-policy
  namespace: zoo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: admins
